# Monte-Carlo-Localization

./: README.md
code/catkin_ws/devel/: .catkin  _setup_util.py  local_setup.bash  local_setup.zsh  setup.sh
code/catkin_ws/devel/.private/usc545mcl/: .rosinstall
code/catkin_ws/devel/.private/usc545mcl/lib/pkgconfig/: usc545mcl.pc
code/catkin_ws/devel/lib/pkgconfig/: usc545mcl.pc
code/catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake
code/catkin_ws/devel/share/usc545mcl/cmake/: usc545mclConfig.cmake
code/catkin_ws/src/usc545mcl/: package.xml
code/catkin_ws/src/usc545mcl/data/: map.yaml
code/catkin_ws/src/usc545mcl/launch/: usc545mcl.launch
code/docker/: Dockerfile  docker-compose.yaml  dockerized_catkin_build.sh  usc_entrypoint.sh
lab2-team14-whatever-master/lab2-team14-whatever-master/: setup.sh
lab2-team14-whatever-master/lab2-team14-whatever-master/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
lab2-team14-whatever-master/lab2-team14-whatever-master/catkin_ws/devel/: env.sh  local_setup.sh  setup.bash  setup.zsh
lab2-team14-whatever-master/lab2-team14-whatever-master/catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
lab2-team14-whatever-master/lab2-team14-whatever-master/catkin_ws/devel/.private/usc545mcl/: local_setup.sh  setup.sh
lab2-team14-whatever-master/lab2-team14-whatever-master/catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
lab2-team14-whatever-master/lab2-team14-whatever-master/catkin_ws/src/usc545mcl/: CMakeLists.txt
(+8 files in other folders)
